# ncatbot

./: .gitignore  CONTRIBUTING.md  README.md  config.yaml  main.py  pyproject.toml  release-notes.md  requirements.txt  setup.py  test_results.txt  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pypi-publish-manual.yml  pypi-publish.yml  pytest.yml
assets/: user-ref-README.md
docs/: 01-项目概览.md  02-核心架构.md  03-事件系统.md  04-API模块.md  05-插件系统.md  06-服务层.md  07-适配器与网络通信.md  08-工具与CLI.md  09-消息体系详解.md  10-架构图.md  README.md  architecture.md  concepts.md
docs/adapter/: 00-重构计划.md
docs/contributing/: README.md
docs/event/: 01-现状分析.md  02-新设计.md  README.md
docs/guide/: README.md
docs/meta/: README.md
docs/plugin_system/: Decorator.md  EventBus.md  UnifiedRegistry-FAQ.md  UnifiedRegistry-参数解析.md  UnifiedRegistry-命令系统.md  UnifiedRegistry-实战案例.md  UnifiedRegistry-快速开始.md  UnifiedRegistry-最佳实践.md  UnifiedRegistry-过滤器系统.md
docs/quick_start/: README.md
docs/reference/: README.md
docs/spec/: 00-架构总则.md  01-Adapter规范.md  02-Service规范.md  03-Registry规范.md  04-API抽象接口规范.md  05-Event标准模型规范.md  06-生命周期规范.md  07-迁移计划.md  08-消除BotClient反向引用.md  09-模块依赖分析与接口提取.md  10-日志与配置模块迁移设计.md  README.md
docs/testing/: README.md  api-reference.md  best-practice-simple.md  best-practice-unittest.md  guide.md  quick-start.md
examples/: README.md
examples/01_hello_world/: main.py
examples/02_event_handling/: main.py
examples/03_message_types/: main.py
examples/04_config_and_data/: main.py
examples/05_bot_api/: main.py
examples/06_hook_and_filter/: main.py
examples/07_rbac/: main.py
examples/08_scheduled_tasks/: main.py
examples/09_notice_and_request/: main.py
examples/10_multi_step_dialog/: main.py
examples/11_group_manager/: main.py
examples/12_qa_bot/: main.py
examples/13_scheduled_reporter/: main.py
examples/14_external_api/: main.py
examples/15_full_featured_bot/: main.py
examples/config/: test_config.py
examples/unified_registry/: README.md  test_readme.py
ncatbot/: __init__.py
ncatbot/adapter/: __init__.py  base.py  registry.py
ncatbot/api/: __init__.py  _sugar.py  client.py  errors.py  interface.py  misc.py
ncatbot/app/: client.py
ncatbot/cli/: __init__.py  __main__.py  main.py
ncatbot/core/: __init__.py  client.py  legacy.py
ncatbot/event/: __init__.py  base.py  bus.py  factory.py  message.py  meta.py  notice.py  parser.py  request.py
ncatbot/mcp/: main.py
ncatbot/plugin/: __init__.py  base.py  compatible_enrollment.py  manifest.py
ncatbot/plugin_system/: __init__.py  base_plugin.py  config.py  decorator.py  deprecated.py  event.py  loader.py  pluginsys_err.py
ncatbot/service/: __init__.py
ncatbot/testing/: __init__.py  assertions.py  conftest_plugin.py  discovery.py  factory.py  harness.py  plugin_harness.py  scenario.py
ncatbot/types/: __init__.py  base.py  enums.py  message.py  meta.py  misc.py  notice.py  request.py  (+1 more)
ncatbot_legacy/: __init__.py
tests/: README.md
(+1014 files in other folders)
