[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=7.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncatbot"
version = "4.5.0-dev1"
description = "NcatBot, NapCat Python SDK"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "木子", email = "lyh_02@qq.com" }, { name = "huan-yp", email = "huan_yp@qq.com"} ]
urls = { "Source" = "https://github.com/liyihao1110/ncatbot", "Bug Reports" = "https://github.com/liyihao1110/ncatbot/issues", "Documentation" = "https://github.com/liyihao1110/ncatbot/wiki" }
requires-python = ">=3.8"
dependencies = [
  "toml",
  "qrcode",
  "schedule",
  "urllib3",
  "websockets",
  "packaging",
  "rich",
  "aiofiles",
  "typing-extensions",
  "colorama>=0.4.6; platform_system == \"Windows\"",
  "importlib-metadata>=8.6.1; python_version >= '3.9'",
  "importlib-metadata>=4.0; python_version < '3.9'",
  "httpx>=0.28.1",
  "psutil>=6.1.1",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "tqdm>=4.67.1",
]

[project.optional-dependencies]
# Dependencies useful for development and testing. Install with:
#   pip install '.[dev]' or '.[test]'
dev = [
  "build",
  "twine",
  "tox>=4.0",
  "tox-uv",
  "uv",
  "pytest",
  "pytest-cov",
  "pre-commit",
  "black",
  "ruff",
  "mypy",
  "isort",
]
test = [
  "pytest",
  "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ncatbot", "ncatbot.*"]

[tool.setuptools_scm]
# write the computed version into a small source file so the package can expose it
write_to = "ncatbot/_version.py"
write_to_template = "__version__ = \"{version}\"\n"
fallback_version = "0+unknown"
tag_regex = "^(?P<prefix>v)?(?P<version>\\d+\\.\\d+\\.\\d+.*)$"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
    "pytest-html>=4.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["test"]
# 忽略 e2e/api 目录（需要真实 NapCat 服务）
# 忽略 examples 目录
addopts = "--ignore=test/e2e/api --ignore=examples --cov=ncatbot --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["ncatbot"]
branch = true
omit = [
    # 版本文件（自动生成）
    "ncatbot/_version.py",
    # 测试文件
    "ncatbot/**/test_*.py",
    # CLI 模块（交互式命令行，需要单独的集成测试）
    "ncatbot/cli/*",
    # MCP 模块（Model Context Protocol 服务端，需要外部 MCP 客户端测试）
    "ncatbot/mcp/*",
    # 网络 I/O（需要真实网络环境）
    "ncatbot/utils/network_io.py",
    # NapCat 适配器（需要真实 NapCat 服务和文件系统操作）
    "ncatbot/core/adapter/nc/*",
    # 模板插件（静态资源）
    "ncatbot/utils/assets/*",
    # 日志格式化（视觉效果代码）
    "ncatbot/utils/logger.py",
    # 废弃的线程池工具
    "ncatbot/utils/thread_pool.py",
    # 测试基础设施（不需要测试自身）
    "ncatbot/utils/testing/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
